--- a/coffee_app/pubspec.yaml
+++ b/coffee_app/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   google_nav_bar: ^5.0.6
   confetti: ^0.7.0
   flutter_credit_card: ^4.0.1
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
+  mailer: ^6.1.1
+  firebase_storage: ^12.1.1
+
 
 
 dev_dependencies:
@@ -92,3 +98,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
